# inpicture

./: .gitignore  CMakeLists.txt  LICENSE  README.md
image/: Image.h
image/exceptions/: FileReadException.h  FileWriteException.h  InputOutputException.h
image/impl/: JPEGImage.cpp  JPEGImage.h  PNGImage.cpp
src/: main.cpp
src/embeder/: Embeder.h
src/image/exceptions/: InvalidFileException.h
src/image/impl/: JPEGImage.cpp  JPEGImage.h  PNGImage.h
src/inpicture/: InPicture.cpp  InPicture.h
src/inpicture/picture/: Picture.cpp  Picture.h  PictureHandler.cpp  PictureHandler.h
src/inpicture/picture/exception/: FileReadException.cpp  FileReadException.h  FileWriteException.cpp  FileWriteException.h  InvalidFileException.cpp  InvalidFileException.h  PictureHandlerNotFound.cpp  PictureHandlerNotFound.h
src/inpicture/picture/io/: PictureLoader.h  PictureSaver.h  PictureWriterReader.h
src/inpicture/picture/io/impl/: JPEGPictureWriterReader.cpp  JPEGPictureWriterReader.h  PNGPictureWriterReader.cpp  PNGPictureWriterReader.h  PPMPictureWriterReader.cpp  PPMPictureWriterReader.h
